--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         </div>
       </div>
     </footer>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
     <script>
       function openNav() {
         document.getElementById("mySidenav").style.width = "250px";
